# NaviGraph

./: .gitignore  LICENSE  README.md  apoE4_8_male_learning_5r_4m__ca1_251222_0DLC_resnet50_apoE_naive_4m_females_CA1_automated_1222Dec12shuffle1_225500.h5  pyproject.toml  requirements.txt  run.py  session_analyzer.py  system_requirements.sh  utils.py
NaviGraph/: README.md  manager.py  utils.py
NaviGraph/calibrator/: utils.py
NaviGraph/plot_generator/: plot_generator.py
NaviGraph/scripts/: plot_minian_data.py
NaviGraph/visualizer/: visualizer.py
analyzer/: session_analyzer.py
calibrator/: __init__.py  maze_calibrator.py
configs/: NaviGraph_basic.yaml  navigraph_basic.yaml
demo_data/: female_8_memory_270225-02262025120302-02272025094330DLC_resnet50_apoE_naive_4m_females_CA1_automated_1222Dec12shuffle1_225500.h5
demo_data/calibration_files/: transform_matrix.npy
examples/: apoE4_8_male_learning_5r_4m__ca1_251222_0.avi
examples/configs/: base_config.yaml
graph/: graph.py  graph_tile_dictionary.py
map/: map_labeler.py
navigraph/: manager.py  run.py  session_manager.py
navigraph/analysis/: analysis_result.py  analysis_utils.py  cross_session_analysis.py  cross_session_analysis_registry.py  session_analysis_registry.py  session_analyzer.py  session_level_analysis.py
navigraph/analyzer/: session_analyzer.py
navigraph/configs/: maze_master_basic.yaml
navigraph/session/: __init__.py  session.py  (+2 more)
scripts/: analysis_postprocess.py
session/: session.py
tests/: test_analyzer.py
tools/: measure_video_fps_duration.py
visualizer/: utils.py
(+30 files in other folders)
